--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-  command = "npm run build:verbose"
+  command = "npm run build"
   publish = "dist"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "18.19.0"
   NPM_FLAGS = "--version"
-  NETLIFY_VERBOSE = "true"
+  NODE_OPTIONS = "--max_old_space_size=4096"
