--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@fontsource/geist-mono": "^5.1.0",
     "@fontsource/geist-sans": "^5.1.0",
     "astro": "^5.0.3",
-    "astro-pagefind": "^1.7.0",
+    "astro-pagefind": "latest",
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.16",
