--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
-    "build:verbose": "astro check && astro build --verbose",
+    "prebuild": "npx pagefind --source dist",
+    "build": "astro check && astro build && npm run prebuild",
+    "build:verbose": "astro check && astro build --verbose && npm run prebuild",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -19,7 +20,6 @@
     "@fontsource/geist-mono": "^5.1.0",
     "@fontsource/geist-sans": "^5.1.0",
     "astro": "^5.0.3",
-    "astro-pagefind": "latest",
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.16",
@@ -28,7 +28,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "pagefind": "^1.2.0",
+    "astro-pagefind": "^1.7.0",
+    "pagefind": "^1.3.0",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.9"
