--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build && npx pagefind --source dist",
-    "build:verbose": "astro check && astro build --verbose && npx pagefind --source dist",
+    "build": "astro check && astro build && npx pagefind --site dist",
+    "build:verbose": "astro check && astro build --verbose && npx pagefind --site dist",
     "preview": "astro preview",
     "astro": "astro"
   },
